notebook: Don't leak arrow gadgets

This was pointed out in
https://bugzilla.gnome.org/show_bug.cgi?id=774743